[package]
name = "cpcmix"
version = "0.1.1"
authors = ["rgiot <giot.romain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
staticfilemap = "0.1.2"
rand = "0.7.3"
cpclib = {version="0.4.2-alpha", features=["xferlib"]}
itertools = "0.9"

[build-dependencies]
itertools = "0.9"